# ros2_learn

install/: local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_opp  add_two_ints_server  battery_status  cpp_node  hw_status_publisher  led_panel  number_counter  number_publisher  robot_news_station  smartphone
install/my_cpp_pkg/lib/my_cpp_pkg/install/: local_setup.sh  (+4 more)
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_starter/share/my_robot_starter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlesim_catch_them_all/lib/turtlesim_catch_them_all/: turtle_controller  turtle_spawner
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_opp.cpp  add_two_ints_server.cpp  battery_status.cpp  hw_status_publisher.cpp  led_panel.cpp  my_first_node  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  smartphone.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: turtlesim_catch_them_all.launch.py
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_starter/: CMakeLists.txt  package.xml
src/my_robot_starter/launch/: number_app.launch.py
src/turtlesim_catch_them_all/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/msg/: TurtleArray.msg
src/turtlesim_catch_them_all/src/: turtle_controller.cpp  turtle_spawner.cpp
(+193 files in other folders)
